# webonacci

./: .env  .travis.yml  Dockerfile  LICENSE  Makefile  README.md  docker-compose.yml  pyproject.toml  run.py
fibonacci/: app.py  service.py  settings.py  utils.py
tests/: test_fibonacci.py
